--- a/StoreEnterprise/src/services/Store.Customers.Infra.CrossCutting.IoC/Store.Customers.Infra.CrossCutting.IoC.csproj
+++ b/StoreEnterprise/src/services/Store.Customers.Infra.CrossCutting.IoC/Store.Customers.Infra.CrossCutting.IoC.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Store.Customers.Application\Store.Customers.Application.csproj" />
       <ProjectReference Include="..\Store.Customers.Data\Store.Customers.Data.csproj" />
+      <ProjectReference Include="..\Store.Customers.Service\Store.Customers.Service.csproj" />
     </ItemGroup>
 
 </Project>
